css/style.css
* {
  box-sizing: border-box;
}

main {
  width: 80%;
  margin: 3rem auto;
}

.container {
  border: 1px solid black;
  /* display: flex;
  flex-direction: row;
  flex-wrap: wrap; */
  display: grid;
  grid-template-columns: 1fr 100px 1fr 400px;
  grid-template-rows: 14rem 3rem 6rem 6rem 6rem;
}
.container div {
  background-color: lightgray;
  margin: .5rem;
  border: 1px solid black;
  /* flex: 1 1 20%; */
}

#bigDiv {
  background-color: firebrick;
  grid-row-start: 2;
  grid-row-end: 5;
  grid-column-start: 3;
  grid-column-end: 5;
}


header {
  background-color: whitesmoke; 
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  
  
}

body {
  font-family: Georgia, 'Times New Roman', Times, serif;
  background-color: rgba(224, 245, 240, 0.3); 
  color: blue;
}

h1 {
  font-size: 12rem;
  color: rgba(84, 162, 85, 0.749);
  line-height: 10
  rem;
  margin: 3rem 0 1rem;
 
}

#ducklogo {
  width: 200px;
	height: 250px;
	border-radius: 50%;
  margin-left: 50px;
  
}

section {
  background-color: rgba(146, 188, 181, 0.3);
  padding: 2rem;
  grid-row-start: 1;
  grid-row-end: 6;
  grid-column-start: 1;
  grid-column-end: 6;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
}

section img {
  width: 460px;
  max-height: 26rem;
  border: 5px solid transparent;
}

section img:hover {
  border: 5px solid rgba(237, 158, 12, 0.75);
  cursor: pointer;
}

div {
  color: rgb(16, 18, 53);
  padding: .5rem 1rem;
  border-width: 1rem;
  width: max-content;
  height: max-content;
  font-size: .8rem;
  margin: 1rem;
  grid-area: 4 / 1 / 4 / 4;
}

ul {
  grid-area: 4 / 2 / 5 / 6;
  margin: 1rem;
  line-height: 1.5rem;
}

/* -- button -- */
section + button {
  background-color:rgba(84, 162, 85, 0.749);
  color: white;
  padding: .5rem 1rem;
  width: max-content;
  height: max-content;
  font-size: 1.75rem;
  margin: 1rem;
}

